--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
 	<title>Document</title>
 </head>
 <body>
-	<div id="wrapper">
+	<div id="hello1">
 	<h1>Hello World!</h1>
 	</div>
-	<h2>this not fun</h2>
-	<h3>this not fun</h3>
-	<h4>this is not fun4</h4>
 </body>
 </html>
