index page done

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 	<div id="hello1">
-	<h1>Hello World!</h1>
-	<h3>test</h3>
-	</div>
+	<h1>HOMELESSNESS IS NOT JUST AN ADULT PROBLEM</h1>
+	<a href="info.html"><h1>CLICK TO ENTER</h1></a>
+		</div>
+	
 </body>
 </html
