--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="hello1">
 	<h1>HOMELESSNESS IS NOT JUST AN ADULT PROBLEM</h1>
-	<a href="info.html"><h1>CLICK TO ENTER</h1></a>
+	<a href="info.html"><h1 id="button1">CLICK TO ENTER</h1></a>
 		</div>
 	
 </body>
