index page fixed closes #11

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<div id="hello1">
-	<h1>HOMELESSNESS IS NOT JUST AN ADULT PROBLEM</h1>
-	<a href="info.html"><h1 id="button1">CLICK TO ENTER</h1></a>
+	<h1>homelessness is a worldwide problem</h1>
+	<a href="info.html"><h1 id="button1">click to enter</h1></a>
 		</div>
 	
 </body>
