final changes closes #13

--- a/donate.html
+++ b/donate.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <title>Help The Homeless Alliance</title>
+    <link href="donate.css" rel="stylesheet" type="text/css">
+    <link href=
+    "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    rel="stylesheet">
 </head>
 <body>
-	
+    <nav>
+        <ul>
+            <li>
+                <a class="logo" href="index.html"><i class=
+                "fa fa-child fa-2x"></i><sup>Help The Homeless
+                Alliance</sup></a>
+            </li>
+            <li>
+                <a href="index.html">HOME</a>
+            </li>
+            <li>
+                <a href="about.html">INFORMATION</a>
+            </li>
+            <li>
+                <a href="donate.html"><span class="donate1">DONATE NOW
+                <i class="fa fa-heart"></i></span></a>
+            </li>
+        </ul>
+    </nav>
+    <div class="wrapper">
+        <div class="main">
+            <img src="donate.jpg">
+            <p>Everyone deserves the opportunity to have their basic needs met.
+            Sometimes all it takes is a hand from the local community. Every
+            donation, small and large, makes a difference. Make an impact in
+            someone's life right now.</p>
+            <hr>
+            <div class="donation">
+                <p class="center">Donate Today and Help the Homeless</p>
+                <ul class="donatecenter">
+                    <li class="paybtn"><i class="fa fa-cc-amex fa-2x"></i></li>
+                    <li class="paybtn"><i class=
+                    "fa fa-cc-mastercard fa-2x"></i></li>
+                    <li class="paybtn"><i class="fa fa-cc-visa fa-2x"></i></li>
+                    <li class="paybtn"><i class=
+                    "fa fa-cc-paypal fa-2x"></i></li>
+                </ul>
+                <ul class="center">
+                    <li class="donatebtn">$20</li>
+                    <li class="donatebtn">$50</li>
+                    <li class="donatebtn">$100</li>
+                    <li class="donatebtn">$500</li>
+                    <li class="donatebtn">$1000</li>
+                    <li class="donatebtn">Other</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
