--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="styles.css">
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <title>Help The Homeless Alliance</title>
+    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href=
+    "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    rel="stylesheet">
 </head>
 <body>
-	<div id="hello1">
-	<h1>homelessness is a worldwide problem</h1>
-	<a href="info.html"><h1 id="button1">click to enter</h1></a>
-		</div>
-	
+    <nav>
+        <ul>
+            <li>
+                <a class="logo" href="index.html"><i class=
+                "fa fa-child fa-2x"></i><sup>Help The Homeless
+                Alliance</sup></a>
+            </li>
+            <li>
+                <a href="index.html">HOME</a>
+            </li>
+            <li>
+                <a href="about.html">INFORMATION</a>
+            </li>
+            <li>
+                <a href="donate.html"><span class="donate1">DONATE NOW
+                <i class="fa fa-heart"></i></span></a>
+            </li>
+        </ul>
+    </nav>
+    <div class="wrapper">
+        <div class="main">
+            <img src="homeless.jpg">
+            <p>HOMELESSNESS IS A WORLDWIDE PROBLEM. <a href=
+            "about.html"><span class="button1">CLICK HERE TO READ
+            MORE</span></a></p>
+        </div>
+    </div>
 </body>
-</html
+</html>
